[gd_scene load_steps=10 format=2]

[ext_resource path="res://arts/space_bg3.jpg" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://player.tscn" type="PackedScene" id=3]
[ext_resource path="res://planets.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://ufos.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=15]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 481, 2, 0, 0, 0, 0, -2, 1, 0, 0, 0, 0, 483, 3, 0, 0, 0, 0, 481, 2 )
}

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 1072, 0, 0, 0, 0, 480, 1072, 0, 0, 0, 0, 192, 1072, 0, 0, 0, 0, 0, 1072 )
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 245, 13 )

[node name="Main_game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
obstacle_1_scene = ExtResource( 4 )
obstacle_2_scene = ExtResource( 6 )

[node name="obstacles_spawn" type="Path2D" parent="."]
position = Vector2( 0, -360 )
curve = SubResource( 15 )

[node name="spawn_location" type="PathFollow2D" parent="obstacles_spawn"]
position = Vector2( 66.3472, 1.28184 )
rotation = 0.00412372
offset = 545.45

[node name="player" parent="." instance=ExtResource( 3 )]

[node name="ufo_timer" type="Timer" parent="."]

[node name="obstacles_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 720 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 480.0
margin_bottom = 720.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="ending_path_meteorite" type="Path2D" parent="."]
position = Vector2( 0, -355 )
curve = SubResource( 7 )

[node name="end_location" type="PathFollow2D" parent="ending_path_meteorite"]
position = Vector2( 231.455, 1072 )
rotation = 3.14159
offset = 718.25

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 240, 717 )
shape = SubResource( 6 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[connection signal="body_entered" from="player" to="." method="_on_player_body_entered"]
[connection signal="timeout" from="obstacles_timer" to="." method="_on_obstacles_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
